--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -12,4 +12,4 @@ spec:
   ports:
   - protocol: TCP
     port: 80 #service-port
-    targetPort: {{ .Values.configmap.port }} #target-port
+    targetPort: 80 # target port
